--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,14 @@
 asgiref==3.2.10
+coverage==5.2
 Django==3.0.8
+django-allauth==0.42.0
+django-excel-base==1.0.4
+django-excel-response2==3.0.2
+django-six==1.0.4
+oauthlib==3.1.0
+python3-openid==3.2.0
 pytz==2020.1
+requests-oauthlib==1.3.0
+screen==1.0.1
 sqlparse==0.3.1
+xlwt==1.3.0
