--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ django-excel-base==1.0.4
 django-excel-response2==3.0.2
 django-six==1.0.4
 oauthlib==3.1.0
+Pillow==7.2.0
 python3-openid==3.2.0
 pytz==2020.1
 requests-oauthlib==1.3.0
