--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,15 @@ asgiref==3.2.10
 coverage==5.2
 Django==3.0.8
 django-allauth==0.42.0
+django-braces==1.14.0
+django-countries==6.1.3
 django-excel-base==1.0.4
 django-excel-response2==3.0.2
+django-model-utils==4.0.0
+django-phone-field==1.8.1
+django-ratings==0.3.7
 django-six==1.0.4
+django-star-ratings==0.9.1
 oauthlib==3.1.0
 Pillow==7.2.0
 python3-openid==3.2.0
@@ -12,4 +18,5 @@ pytz==2020.1
 requests-oauthlib==1.3.0
 screen==1.0.1
 sqlparse==0.3.1
+swapper==1.1.2.post1
 xlwt==1.3.0
