--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ django-braces==1.14.0
 django-countries==6.1.3
 django-excel-base==1.0.4
 django-excel-response2==3.0.2
+django-materializecss-form==1.1.17
 django-model-utils==4.0.0
 django-phone-field==1.8.1
 django-ratings==0.3.7
