--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.2.10
 coverage==5.2
+dj-database-url==0.5.0
 Django==3.0.8
 django-allauth==0.42.0
 django-braces==1.14.0
@@ -9,15 +10,21 @@ django-excel-response2==3.0.2
 django-materializecss-form==1.1.17
 django-model-utils==4.0.0
 django-phone-field==1.8.1
+django-phonenumber-field==5.0.0
 django-ratings==0.3.7
 django-six==1.0.4
 django-star-ratings==0.9.1
+gunicorn==20.0.4
 oauthlib==3.1.0
+phonenumbers==8.12.8
 Pillow==7.2.0
+psycopg2==2.8.5
+psycopg2-binary==2.8.5
 python3-openid==3.2.0
 pytz==2020.1
 requests-oauthlib==1.3.0
 screen==1.0.1
 sqlparse==0.3.1
+stripe==2.50.0
 swapper==1.1.2.post1
 xlwt==1.3.0
