--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 asgiref==3.2.10
+boto3==1.14.62
+botocore==1.17.62
 coverage==5.2
 dj-database-url==0.5.0
 Django==3.0.8
@@ -14,7 +16,10 @@ django-phonenumber-field==5.0.0
 django-ratings==0.3.7
 django-six==1.0.4
 django-star-ratings==0.9.1
+django-storages==1.10.1
+docutils==0.15.2
 gunicorn==20.0.4
+jmespath==0.10.0
 oauthlib==3.1.0
 phonenumbers==8.12.8
 Pillow==7.2.0
@@ -23,6 +28,7 @@ psycopg2-binary==2.8.5
 python3-openid==3.2.0
 pytz==2020.1
 requests-oauthlib==1.3.0
+s3transfer==0.3.3
 screen==1.0.1
 sqlparse==0.3.1
 stripe==2.50.0
